[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zambeze"
version = "0.2"
authors = [{name = "Oak Ridge National Laboratory", email = "support@zambeze.org"}]
description = "A task orchestration system for scientific workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyzmq",
    "dill",
    "networkx",
    "pyyaml",
    "SQLAlchemy",
    "globus_sdk",
    "pika",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
zambeze = "zambeze.cli:main"
zambeze-agent = "zambeze.cli_agent:main"
