[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zambeze"
version = "0.2"
authors = [{name = "Oak Ridge National Laboratory", email = "support@zambeze.org"}]
description = "A task orchestration system for scientific workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyzmq",
    "dill",
    "networkx",
    "pyyaml",
    "SQLAlchemy",
    "globus_sdk",
    "pika",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
zambeze = "zambeze.cli:main"
zambeze-agent = "zambeze.cli_agent:main"

[tool.pytest.ini_options]
markers = [
    "unit: Mark a test as a unit test",
    "end_to_end: End to end tests that consists of a zambeze agent a queue and additional third parties, how a user would interact",
    "integration: integration tests composed of more than a single unit of zambeze code and a third party i.e. rsync",
    "internal_integration: Internal integration tests composed of more than a single unit of zambeze code",
    "gitlab_runner: Mark a test that should only be run in the context of the gitlabrunner",
    "globus: Mark a test that should only be run in the context of a globus connect server, the server should exist and be running on the same machine",
    "globus_native: Mark a test that should only be run in the context of a globus connect server and run manually because of the native auth flow"
]
