[metadata]
description-file = README.md

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
max-complexity = 10
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    # init needs to import the submodules.
    zambeze/__init__.py:F401
    zambeze/campaign/__init__.py:F401
    # Allow undefined name '__version__'
    setup.py:F821