[metadata]
description-file = README.md

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
max-complexity = 10
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    # init needs to import the submodules.
    zambeze/__init__.py:F401
    zambeze/campaign/__init__.py:F401
    zambeze/campaign/activities/__init__.py:F401
    # Allow undefined name '__version__'
    setup.py:F821

[tool:pytest]
pythonpath = . zambeze
markers = 
    unit: Mark a test as a unit test
    gitlab_runner: Mark a test that should only be run in the context of the gitlabrunner
    globus: Mark a test that should only be run in the context of a globus connect server, the server should exist and be running on the same machine
